--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -12,7 +12,7 @@
 <%= render Persona::View.new(
   email_address: "anonimized-user-10599@example.org",
   first_name: "Course administrator",
-  last_name: "Anne"
+  last_name: "Anne",
 ) %>
 
 <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
@@ -23,9 +23,9 @@
   Susy is a SCITT service manager who belongs to one accredited body.
 </p>
 <%= render Persona::View.new(
-  email_address:  "anonimized-user-8847@example.org",
-  first_name:  "ITT partnership manager",
-  last_name: "Susy"
+  email_address: "anonimized-user-8847@example.org",
+  first_name: "ITT partnership manager",
+  last_name: "Susy",
 ) %>
 
 <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
@@ -47,8 +47,8 @@
 
 <%= render Persona::View.new(
   email_address: "anonimized-user-7839@example.org",
-  first_name:  "Multi-org administrator",
-  last_name: "Mary"
+  first_name: "Multi-org administrator",
+  last_name: "Mary",
 ) %>
 
 <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
@@ -61,5 +61,5 @@
 <%= render Persona::View.new(
   email_address: "becomingateacher+admin-integration-tests@digital.education.gov.uk",
   first_name: "Support agent",
-  last_name: "Colin"
+  last_name: "Colin",
 ) %>
