--- a/app/views/publish/courses/_related_sidebar.html.erb
+++ b/app/views/publish/courses/_related_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="app-status-box"">
+<div class="app-status-box">
   <% if @self_accredited_courses.present? || @courses_by_accrediting_provider.present? %>
     <h3 class="govuk-heading-m">Copy content from another course</h3>
     <p class="govuk-body">Fill in this page with content from another course.</p>
