--- a/app/views/publish/courses/age_range/edit.html.erb
+++ b/app/views/publish/courses/age_range/edit.html.erb
@@ -27,8 +27,7 @@
 
         <%= f.govuk_radio_divider %>
 
-        <%= f.govuk_radio_button :age_range_in_years, "other", label: { text: "Another age range" },
-        data: { qa: "course__age_range_in_years_other_radio" } do %>
+        <%= f.govuk_radio_button :age_range_in_years, "other", label: { text: "Another age range" }, data: { qa: "course__age_range_in_years_other_radio" } do %>
           <p class="govuk-body">Enter an age range in years, for example: 5 to 11. The course must cover 4 or more school years.</p>
 
           <%= f.govuk_text_field :course_age_range_in_years_other_from, label: { text: "From" }, class: "govuk-input govuk-input--width-2", data: { qa: "course__age_range_in_years_other_from_input" } %>
