--- a/app/views/publish/courses/degrees/_additional_degree_subject_requirements.html.erb
+++ b/app/views/publish/courses/degrees/_additional_degree_subject_requirements.html.erb
@@ -11,7 +11,6 @@
       value: course_object.additional_degree_subject_requirements ? course_object.degree_subject_requirements : "",
       form_group: { id: "degree-subject-requirements" },
       label: { text: "Degree subject requirements" },
-      data: { qa: "degree_subject_requirements__requirements" }
-    %>
+      data: { qa: "degree_subject_requirements__requirements" } %>
   <% end %>
 <% end %>
