--- a/app/views/publish/providers/locations/_form.html.erb
+++ b/app/views/publish/providers/locations/_form.html.erb
@@ -6,8 +6,8 @@
   label: { text: "Unique Reference Number (URN)", size: "m" },
   hint: {
     text: t(
-      'helpers.hint.site.urn_html'
-    )
+      "helpers.hint.site.urn_html",
+    ),
   },
   width: 10) %>
 
