--- a/app/views/publish/shared/_navigation_bar_with_training_partners.html.erb
+++ b/app/views/publish/shared/_navigation_bar_with_training_partners.html.erb
@@ -7,5 +7,5 @@
     { name: t("navigation_bar.organisation_details"), url: details_publish_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year) },
   ],
   current_path: request.path,
-  current_user: @current_user
+  current_user: @current_user,
 )) %>
