--- a/app/components/phase_banner/view.html.erb
+++ b/app/components/phase_banner/view.html.erb
@@ -1,4 +1,4 @@
-<div class="app-phase-banner<%= @no_border ? ' app-phase-banner--no-border' : '' %> govuk-!-display-none-print">
+<div class="app-phase-banner<%= @no_border ? " app-phase-banner--no-border" : "" %> govuk-!-display-none-print">
   <%= govuk_phase_banner(
     tag: {
       text: environment_label,
