--- a/app/views/publish/courses/_copy_content_warning.html.erb
+++ b/app/views/publish/courses/_copy_content_warning.html.erb
@@ -11,7 +11,7 @@
     <p class="govuk-body">We’ve copied these fields from <%= @source_course.name %> (<%= @source_course.course_code %>):</p>
     <ul class="govuk-list">
       <% copied_fields.each do |name, field| %>
-        <li><%= govuk_link_to name, "#publish-course-information-form-#{field.gsub("_", "-")}-field", class: "govuk-notification-banner__link" %></li>
+        <li><%= govuk_link_to name, "#publish-course-information-form-#{field.gsub('_', '-')}-field", class: "govuk-notification-banner__link" %></li>
       <% end %>
     </ul>
     <p class="govuk-body">Please check them and make your changes before saving.</p>
