--- a/app/views/publish/courses/modern_languages/edit.html.erb
+++ b/app/views/publish/courses/modern_languages/edit.html.erb
@@ -3,31 +3,29 @@
 <% content_for :before_content do %>
   <%= govuk_back_link_to(
     details_publish_provider_recruitment_cycle_course_path(
-      course.provider_code, course.recruitment_cycle_year, course.course_code)) 
-  %>
+      course.provider_code, course.recruitment_cycle_year, course.course_code
+    ),
+  ) %>
 <% end %>
 
-
-<%= render 'publish/shared/errors' %>
+<%= render "publish/shared/errors" %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_with model: course,
-          url: modern_languages_publish_provider_recruitment_cycle_course_path(@course.provider_code, @course.recruitment_cycle_year, @course.course_code),
-          method: :put do |form| %>
+                  url: modern_languages_publish_provider_recruitment_cycle_course_path(@course.provider_code, @course.recruitment_cycle_year, @course.course_code),
+                  method: :put do |form| %>
       <%= render "publish/shared/error_messages", error_keys: [:modern_languages_subjects] %>
 
-      <%= render 'publish/shared/course_creation_hidden_fields',
+      <%= render "publish/shared/course_creation_hidden_fields",
         form: form,
         course_creation_params: params.fetch(:course, {}).slice(:subjects_ids),
-        except_keys: []
-      %>
+        except_keys: [] %>
 
-      <%= render 'form_fields', form: form %>
+      <%= render "form_fields", form: form %>
 
       <%= form.submit course.is_running? ? "Save and publish changes" : "Save",
-        class: "govuk-button", data: { qa: 'course__save' }
-      %>
+        class: "govuk-button", data: { qa: "course__save" } %>
     <% end %>
   </div>
 </div>
