--- a/app/views/publish/courses/outcome/edit.html.erb
+++ b/app/views/publish/courses/outcome/edit.html.erb
@@ -2,8 +2,8 @@
 
 <% content_for :before_content do %>
   <%= govuk_back_link_to(
-    details_publish_provider_recruitment_cycle_course_path(course.provider_code, course.recruitment_cycle_year, course.course_code)
-    ) %>
+    details_publish_provider_recruitment_cycle_course_path(course.provider_code, course.recruitment_cycle_year, course.course_code),
+  ) %>
 <% end %>
 
 <%= render "publish/shared/errors" %>
@@ -14,7 +14,8 @@
                   url: outcome_publish_provider_recruitment_cycle_course_path(
                     @course.provider_code,
                     @course.recruitment_cycle_year,
-                    @course.course_code),
+                    @course.course_code,
+                  ),
                   method: :put do |form| %>
 
       <% course_name_and_code = capture do %>
