--- a/app/views/publish/courses/subjects/edit.html.erb
+++ b/app/views/publish/courses/subjects/edit.html.erb
@@ -3,25 +3,23 @@
 <% content_for :before_content do %>
   <%= govuk_back_link_to(
     details_publish_provider_recruitment_cycle_course_path(
-      course.provider_code, course.recruitment_cycle_year, course.course_code))
-  %>
+      course.provider_code, course.recruitment_cycle_year, course.course_code
+    ),
+  ) %>
 <% end %>
-
-
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_with model: course,
-          url: subjects_publish_provider_recruitment_cycle_course_path(@course.provider_code, @course.recruitment_cycle_year, @course.course_code),
-          method: :put do |form| %>
+                  url: subjects_publish_provider_recruitment_cycle_course_path(@course.provider_code, @course.recruitment_cycle_year, @course.course_code),
+                  method: :put do |form| %>
 
       <%= form.govuk_error_summary %>
 
-      <%= render 'form_fields', form: form %>
+      <%= render "form_fields", form: form %>
 
       <%= form.submit course.is_published? ? "Save and publish" : "Save",
-        class: "govuk-button", data: { qa: 'course__save' }
-      %>
+        class: "govuk-button", data: { qa: "course__save" } %>
     <% end %>
   </div>
 </div>
