--- a/app/views/publish/courses/subjects/new.html.erb
+++ b/app/views/publish/courses/subjects/new.html.erb
@@ -4,17 +4,17 @@
   <%= govuk_back_link_to(@back_link_path) %>
 <% end %>
 
-<%= render 'publish/shared/errors' %>
+<%= render "publish/shared/errors" %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_with url: continue_publish_provider_recruitment_cycle_courses_subjects_path(
                     @provider.provider_code,
-                    @provider.recruitment_cycle_year
+                    @provider.recruitment_cycle_year,
                   ),
                   method: :get do |form| %>
       <%= render "publish/courses/new_fields_holder", form: form, except_keys: [] do |fields| %>
-        <%= render 'form_fields', form: fields %>
+        <%= render "form_fields", form: fields %>
       <% end %>
     <% end %>
   </div>
