--- a/app/views/publish/providers/locations/new.html.erb
+++ b/app/views/publish/providers/locations/new.html.erb
@@ -8,7 +8,7 @@
       model: @location_form,
       url: publish_provider_recruitment_cycle_locations_path(@location_form.provider_code, @location_form.recruitment_cycle_year),
       method: :post,
-      class: "location-form"
+      class: "location-form",
     ) do |f| %>
 
       <%= f.govuk_error_summary %>
