--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,8 +3,14 @@
 @import "govuk-frontend/govuk/all";
 @import "@ministryofjustice/frontend/moj/all";
 
+$moj-images-path: "~@ministryofjustice/frontend/moj/assets/images/";
+$mobile-small-start: 400px;
+$mobile-small-end: 401px;
+$mobile-big-start: 500px;
+$mobile-big-end: 501px;
 $git-brand-colour: #159964;
 
+@import "components/all";
 @import "advice";
 @import "card";
 @import "description-list";
