--- a/app/assets/stylesheets/components/_filters.scss
+++ b/app/assets/stylesheets/components/_filters.scss
@@ -1,11 +1,10 @@
-@import "../base.scss";
-@import "~@ministryofjustice/frontend/moj/settings/assets";
-@import "~@ministryofjustice/frontend/moj/settings/measurements";
-@import "~@ministryofjustice/frontend/moj/helpers/all";
-@import "~@ministryofjustice/frontend/moj/objects/width-container";
-@import "~@ministryofjustice/frontend/moj/objects/filter-layout";
-@import "~@ministryofjustice/frontend/moj/objects/scrollable-pane";
-@import "~@ministryofjustice/frontend/moj/components/filter/filter";
+@import "@ministryofjustice/frontend/moj/settings/assets";
+@import "@ministryofjustice/frontend/moj/settings/measurements";
+@import "@ministryofjustice/frontend/moj/helpers/all";
+@import "@ministryofjustice/frontend/moj/objects/width-container";
+@import "@ministryofjustice/frontend/moj/objects/filter-layout";
+@import "@ministryofjustice/frontend/moj/objects/scrollable-pane";
+@import "@ministryofjustice/frontend/moj/components/filter/filter";
 
 .app-filter {
   box-shadow: none;
