Add logic to render correct button
- Based on support being true in the params
- If it is true render the button to login as an admin instead of sign in using personas
- If it is false, keep the original journey

--- a/app/views/sign_in/_default_signin_content.html.erb
+++ b/app/views/sign_in/_default_signin_content.html.erb
@@ -7,8 +7,13 @@
   <%= govuk_button_to("Sign in using DfE Sign-in", "/auth/dfe", class: "qa-sign_in_button") %>
 
   <p class="govuk-body-m">If you do not have a DfE Sign-in account but need access to <%= I18n.t("service_name") %>, email <%= support_email %>.</p>
-<% else %>
-  <p class="govuk-body-m">Use Personas to access an account.</p>
-
-  <%= govuk_link_to "Sign in using a Persona", "/personas", class: "govuk-button", data: { qa: "sign-in-using-a-persona" } %>
+  <% elsif params[:support] == "true" %>
+    <%= render Persona::View.new(
+      email_address: "becomingateacher+admin-integration-tests@digital.education.gov.uk",
+      first_name: "Support agent",
+      last_name: "an Admin"
+    ) %>
+  <% else %>
+    <p class="govuk-body-m">Use Personas to access an account.</p>
+    <%= govuk_link_to "Sign in using a Persona", "/personas", class: "govuk-button", data: { qa: "sign-in-using-a-persona" } %>
 <% end %>
