[147] Fix svg error for support filters

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 @import "govuk-frontend/govuk/all";
 @import "@ministryofjustice/frontend/moj/all";
 
-$moj-images-path: "~@ministryofjustice/frontend/moj/assets/images/";
+$moj-images-path: "@ministryofjustice/frontend/moj/assets/images/";
 $mobile-small-start: 400px;
 $mobile-small-end: 401px;
 $mobile-big-start: 500px;
