Add rollover text to title bar
- Add logic to display current cycle if current cycle

--- a/app/components/title_bar/view.html.erb
+++ b/app/components/title_bar/view.html.erb
@@ -2,5 +2,13 @@
   <div class="govuk-grid-column-full">
     <p class="govuk-heading-s title-bar-inline govuk-!-margin-bottom-2"><%= title %></p>
     <%= link %>
+    <% if rollover_active? %>
+      <span class="govuk-hint title-bar-inline">
+        <%= "- #{current_recruitment_cycle_year} to #{next_recruitment_cycle_year} " %>
+        <% if current_recruitment_cycle?  %>
+          - current
+        <% end %>
+      </span>
+    <% end %>
   </div>
 </div>
