Add next recruitment cycle logic text
- If the user is in the next recruitment cycle

--- a/app/components/title_bar/view.html.erb
+++ b/app/components/title_bar/view.html.erb
@@ -5,9 +5,10 @@
     <%= change_organisation_link %>
     <% if rollover_active? %>
       <span class="govuk-hint title-bar-inline">
-        <%= "- #{current_recruitment_cycle_year} to #{next_recruitment_cycle_year} " %>
         <% if current_recruitment_cycle?  %>
-          - current
+          <%= "- #{current_recruitment_cycle_year} to #{next_recruitment_cycle_year} - current" %>
+        <% elsif next_recruitment_cycle? %>
+          <%= "- #{current_recruitment_cycle_year + 1} to #{next_recruitment_cycle_year + 1}" %>
         <% end %>
       </span>
     <% end %>
