Remove line if change RC link not present

--- a/app/assets/stylesheets/components/_title-bar.scss
+++ b/app/assets/stylesheets/components/_title-bar.scss
@@ -12,5 +12,8 @@
   display: inline;
   margin-right: govuk-spacing(2);
   padding-right: govuk-spacing(2);
+}
+
+.title-bar-item-separator:not(:last-child) {
   border-right: 1px solid $govuk-border-colour;
 }
