--- a/app/components/title_bar/view.html.erb
+++ b/app/components/title_bar/view.html.erb
@@ -1,10 +1,15 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <p class="govuk-heading-s title-bar-inline govuk-!-margin-bottom-2"><%= title %></p>
+
     <% if rollover_active? %>
       <%= change_cycle_link(@provider) %>
     <% end %>
-    <%= change_organisation_link %>
+
+    <% if current_user.providers.where(recruitment_cycle: RecruitmentCycle.current).count > 1 %>
+      <%= change_organisation_link %>
+    <% end %>
+
     <% if rollover_active? %>
       <span class="govuk-hint title-bar-inline">
         <% if current_recruitment_cycle?  %>
