--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
       <div class="govuk-width-container">
         <% if current_user && @provider %>
           <% if render_title_bar?(current_user: current_user, provider: @provider) %>
-           <%= render TitleBar::View.new(title: @provider.provider_name, provider: @provider.provider_code) %>
+           <%= render TitleBar::View.new(title: @provider.provider_name, provider: @provider.provider_code, current_user: current_user) %>
           <% end %>
         <% end %>
       </div>
