Show change org link for admins too

--- a/app/components/title_bar/view.html.erb
+++ b/app/components/title_bar/view.html.erb
@@ -6,7 +6,7 @@
       <%= change_cycle_link(@provider) %>
     <% end %>
 
-    <% if current_user.providers.where(recruitment_cycle: RecruitmentCycle.current).count > 1 %>
+    <% if current_user.providers.where(recruitment_cycle: RecruitmentCycle.current).count > 1 || current_user.admin? %>
       <%= change_organisation_link %>
     <% end %>
 
